# LinkedIn-Connections-Growth-Analysis

./: .gitignore  LinkedIn-Connection-Plots.ipynb  README.md  plot.py  requirements.txt  utils.py
linkedin/: README.md  pyproject.toml
linkedin/data/: connections_preprocessed.csv
linkedin/src/: linkedinPlots.ipynb  utils.py
