[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = "Medium article - source code"
authors = ["yleprince <yrieix.leprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
jupyterlab = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
